@@ -9,6 +9,9 @@ CHANGES
 CHANGES
   *  Fixed bug in sampling of posteriors in linear models
   *  Fixed bug computing the Bayes factor of unbalanced one-way ANOVA with two levels
+  *  Fixed occasional problem where optimization for the importance sampler would fail, giving a numerically singular matrix
+  *  Fixed problem where extremely rare large or small g values from the sampler would cause the Bayes factor to be NA (again, creating a singular numerically singular matrix). These very rare samples are now disregarded.
+  *  Added global option to turn progress bars on or off; use options(BFprogress = TRUE) or options(BFprogress = FALSE) 
   *  Added MCMC chain thinning to nWayAOV - to use, pass "thin" argument to posterior() or lmBF()
   *  Added MCMC chain column filtering, useful for low memory systems. To use, pass "columnFilter" argument to posterior() or lmBF(). See the help for posterior() for more details.
 
